// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col gap-2"
>
  <p>
    Please select your age:
  </p>
  <label
    className="sc-lmEHzG gfxnAt"
    htmlFor="age1"
  >
    <input
      aria-label="0 - 30"
      className="sc-dGVqZU eMqJQP"
      id="age1"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-gySaAA kbLvna"
    >
      <div
        className="sc-dCxpUB gkSwQO"
      />
    </span>
    <span
      className="sc-gOqvNp iCiRZl"
    >
      0 - 30
    </span>
  </label>
  <label
    className="sc-lmEHzG gfxnAt"
    htmlFor="age2"
  >
    <input
      aria-label="31 - 60"
      className="sc-dGVqZU eMqJQP"
      id="age2"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-gySaAA kbLvna"
    >
      <div
        className="sc-dCxpUB gkSwQO"
      />
    </span>
    <span
      className="sc-gOqvNp iCiRZl"
    >
      31 - 60
    </span>
  </label>
  <label
    className="sc-lmEHzG gfxnAt"
    htmlFor="age3"
  >
    <input
      aria-label="61 - 100"
      className="sc-dGVqZU eMqJQP"
      id="age3"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-gySaAA kbLvna"
    >
      <div
        className="sc-dCxpUB gkSwQO"
      />
    </span>
    <span
      className="sc-gOqvNp iCiRZl"
    >
      61 - 100
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="sc-lmEHzG gfxnAt"
>
  <input
    checked={true}
    className="sc-dGVqZU eMqJQP"
    onClick={[Function]}
    readOnly={true}
    type="radio"
  />
  <span
    className="sc-gySaAA kbLvna"
  >
    <div
      className="sc-dCxpUB gkSwQO"
    />
  </span>
  <span
    className="sc-gOqvNp iCiRZl"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="sc-lmEHzG gfxnAt"
>
  <input
    className="sc-dGVqZU eMqJQP"
    disabled={true}
    onClick={[Function]}
    type="radio"
  />
  <span
    className="sc-gySaAA kbLvna"
  >
    <div
      className="sc-dCxpUB gkSwQO"
    />
  </span>
  <span
    className="sc-gOqvNp iCiRZl"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders No label 1`] = `
<div
  dir="rtl"
>
  <label
    className="sc-lmEHzG gfxnAt"
    htmlFor="button1"
  >
    <input
      className="sc-dGVqZU eMqJQP"
      id="button1"
      name="button"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-gySaAA kbLvna"
    >
      <div
        className="sc-dCxpUB gkSwQO"
      />
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col gap-2"
  >
    <p>
      Please select your age:
    </p>
    <label
      className="sc-lmEHzG gfxnAt"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="sc-dGVqZU eMqJQP"
        id="age1"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-gySaAA kbLvna"
      >
        <div
          className="sc-dCxpUB gkSwQO"
        />
      </span>
      <span
        className="sc-gOqvNp iCiRZl"
      >
        0 - 30
      </span>
    </label>
    <label
      className="sc-lmEHzG gfxnAt"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="sc-dGVqZU eMqJQP"
        id="age2"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-gySaAA kbLvna"
      >
        <div
          className="sc-dCxpUB gkSwQO"
        />
      </span>
      <span
        className="sc-gOqvNp iCiRZl"
      >
        31 - 60
      </span>
    </label>
    <label
      className="sc-lmEHzG gfxnAt"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="sc-dGVqZU eMqJQP"
        id="age3"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-gySaAA kbLvna"
      >
        <div
          className="sc-dCxpUB gkSwQO"
        />
      </span>
      <span
        className="sc-gOqvNp iCiRZl"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;
